# libudfread

./: CMakeLists.txt
cmake/: CMakeLists.txt  config.h  config.h.cm  generate_solution.bat  headers_fixup.h  libudfread.def  udfread-version.h
src/: default_blockinput.c  ecma167.c  ecma167.h  udfread.c  udfread.h
